<resources>
    <!-- DO NOT TOUCH -->
    <string name="app_name">Profile</string>
    <string name="main_invalid_data">Invalid data</string>
    <string name="main_save">Save</string>
    <string name="main_saved_succesfully">Student saved successfully</string>
    <string name="main_error_saving">Error saving student</string>
    <string name="txtWeb">(web)</string>
    <string name="lblWeb">Web</string>
    <string name="txtAdress">(adress)</string>
    <string name="lblAdress">Adress</string>
    <string name="txtPhone">(phone)</string>
    <string name="lblNumber">Phone number</string>
    <string name="txtEmail">(email)</string>
    <string name="lblEmail">Email</string>
    <string name="txtName">(name)</string>
    <string name="lblName">Name</string>
    <string name="descriptionPhone">icon phone</string>
    <string name="descriptionEmail">icon email</string>
    <string name="descriptionAddres">icon address</string>
    <string name="descriptionWeb">icon web</string>
    <string name="descriptionAvatar">image of avatar</string>
    <!-- END DO NOT TOUCH -->
</resources>
